# LLAgent

./: .gitignore  design.md  doubao_test.py  pyproject.toml  queries.json  rerank_vs_baseline_report.md  设计过程.md
rag_baseline/: benchmark.py  config.py  evaluate.py  generator.py  indexer.py  pipeline.py  queries.json  retriever.py  run_baseline.py
rerank_rag_with_loop/: benchmark.py  config.py  evaluate.py  feedback.py  generator.py  pipeline.py  queries.json  reranker.py  retriever.py  run.py
