[project]
name = "llagent"
version = "0.1.0"
description = "RAG experiments for novel question answering."
readme = "design.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "datasets>=2.19.0",
    "faiss-cpu>=1.8.0",
    "jieba>=0.42.1",
    "numpy>=1.26.0",
    "openai>=1.35.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "torch==2.7.1+cu118",
]

[dependency-groups]
dev = ["ipykernel>=6.29.0", "jupyter>=1.0.0"]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
